<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarcodeWallet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="signup">Sign Up</string>
    <string name="rePassword">Retype Password</string>
    <string name="title_activity_choose_action">ChooseAction</string>
    <string name="request">Make Payment</string>
    <string name="linkcard">Add a Card</string>
    <string name="title_activity_bar_code_activity">BarCodeActivity</string>
    <string name="title_activity_link_card">LinkCardActivity</string>
    <string name="title_activity_voucher_system">Voucher System</string>
    <string name="title_activity_voucher_barcode_activity">Voucher</string>
    <string name="CreditCardNumber">Credit Card Number</string>
    <string name="CardHolderName">Card Holder Name</string>
    <string name="CVV">CVV Number</string>
    <string name="ExpirationDate">Expiration Date</string>
    <string name="Month">Month XX</string>
    <string name="Year">Year XX</string>
    <string name="Expiration">Expiration:</string>
    <string name="voucher">Add or Use Vouchers</string>

    <string-array name="CardType">
        <item>Visa</item>
        <item>MasterCard</item>
        <item>American Express</item>
        <item>Discover</item>
    </string-array>

</resources>