<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/CardHolderName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CardHolderName"
        android:lines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/CreditCardNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CreditCardNumber"
        android:inputType="number"
        android:lines="1"
        android:singleLine="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <EditText
        android:id="@+id/CVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/CVV"
        android:inputType="numberPassword"
        android:lines="1"
        android:singleLine="true" />
    <Spinner
    android:id="@+id/cardType"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    
    />
    
 </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Expiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/Expiration"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Month"
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Year"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="linkCard"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>