<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:layout_marginBottom="100dp">
    <EditText	android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
    	android:lines="1"
    	android:inputType="textNoSuggestions"
        android:hint="@string/username"/>
    <EditText	android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/submit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submit"/>
        
         <Button android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:onClick="signUp"/>
        
    </LinearLayout>
</LinearLayout>