<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/request"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showBarcode"
        android:text="@string/request" />

    <Button
        android:id="@+id/linkcard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="linkCreditCard"
        android:text="@string/linkcard" />

    <Button
        android:id="@+id/voucher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="voucher"
        android:text="@string/voucher" />

    <TextView 
        android:id="@+id/textView" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>